--- a/src/app/components/edit-account/edit-account.component.html
+++ b/src/app/components/edit-account/edit-account.component.html
@@ -18,7 +18,7 @@
 
       <ng-container>
         <!-- =============================== -->
-        <!-- AWS IAM USER ACCOUNT PROPERTIES -->
+        <!-- aws IAM USER ACCOUNT PROPERTIES -->
         <!-- =============================== -->
         <div class="form-group" style="width: 100%; display: inline-block;">
           <label>Session Alias<span class="danger-text">*</span></label>
