docs: fix link color

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -12,3 +12,7 @@ img[src$="center-img"] {
   --md-primary-fg-color--light: #ECB7B7;
   --md-primary-fg-color--dark:  #90030C;
 }
+
+.md-typeset a {
+   color: 78E0CF !important;
+}
