--- a/src/app/components/shared/profile-page/profile-page.component.html
+++ b/src/app/components/shared/profile-page/profile-page.component.html
@@ -12,6 +12,8 @@
     <form [formGroup]="form" class="form center-vertical text-left" (submit)="saveOptions();">
 
       <div class="no-margin no-padding panel" *ngIf="activeTab === 1">
+        <h2>Browser Extension Options</h2>
+
         <h2>Default Regions</h2>
 
         <div class="form-group" style="width: 49%; display: inline-block;">
