fix: typo in button
Fixed typo in the word Synchronize

--- a/src/app/components/aws-sso/aws-sso.component.html
+++ b/src/app/components/aws-sso/aws-sso.component.html
@@ -49,7 +49,7 @@
 
     <ng-container *ngIf="isAwsSsoActive">
       <button class="button pull-left disabled" (click)="logout()">Logout</button>
-      <button class="button pull-right" (click)="forceSync()">Syncronize</button>
+      <button class="button pull-right" (click)="forceSync()">Synchronize</button>
     </ng-container>
 
   </ng-container>
