--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -21,7 +21,7 @@ h1, h2, h3, h4, h5, h6 {
   left:  0;
   right:  0;
   height: 20px;
-  background: #f8f8f8;
+  /*background: #f8f8f8;*/
   -webkit-user-select: none;
   -webkit-app-region: drag;
 }
