--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,6 @@ Ng Select theme material
  */
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
