--- a/src/app/components/aws-sso/aws-sso.component.html
+++ b/src/app/components/aws-sso/aws-sso.component.html
@@ -1,6 +1,6 @@
-<img src="assets/images/fake_blur.png" class="fake-blur" />
+<img src="assets/images/fake_blur.png" class="fake-blur"  alt="" />
 <div class="background">
-  <ng-container *ngIf="!loading">
+  <ng-container>
     <div class="container-fluid">
       <h1><a (click)="goBack()" class="back-link"><i class="fa fa-arrow-left"></i></a><i class="fa fa-fingerprint"></i> Identity Providers</h1>
 
@@ -26,8 +26,8 @@
         </div>
 
         <div class="form-group" style="width: 100%; display: inline-block;">
-          <label>Default browser opening</label>
-          <ng-select formControlName="defaultBrowserOpening" bindLabel="type" bindValue="type" [items]="[{type: 'In-app'}, {type: 'In-browser'}]" [(ngModel)]="selectedBrowserOpening" dropdownPosition="top"></ng-select>
+          <label><strong>Default browser opening</strong></label>
+          <ng-select formControlName="defaultBrowserOpening" bindLabel="type" bindValue="type" [items]="[{type: eConstants.inApp.toString() }, {type: eConstants.inBrowser.toString() }]" [(ngModel)]="selectedBrowserOpening" dropdownPosition="top"></ng-select>
         </div>
         </ng-container>
 
@@ -51,16 +51,15 @@
     </div>
 
     <ng-container *ngIf="!isAwsSsoActive">
-      <button class="button pull-center" (click)="login()">Login</button>
+      <button class="button pull-center" (click)="login()" *ngIf="!loading">Login</button>
+      <button class="button pull-center disabled" *ngIf="loading" disabled><i class="fa fa-spin fa-spinner"></i></button>
     </ng-container>
 
     <ng-container *ngIf="isAwsSsoActive">
       <button class="button pull-left disabled" (click)="logout()">Logout</button>
-      <button class="button pull-right" (click)="forceSync()">Synchronize</button>
+      <button class="button pull-right" (click)="forceSync()" *ngIf="!loading">Synchronize</button>
+      <button class="button pull-center disabled " *ngIf="loading" disabled><i class="fa fa-spin fa-spinner"></i></button>
     </ng-container>
 
-  </ng-container>
-  <ng-container *ngIf="loading">
-    <div class="container-fluid"></div>
   </ng-container>
 </div>
