--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -12,8 +12,8 @@
         <label>My Cloud Provider is:</label>
         <br>
         <div class="correct-top">
-        <button type="button" class="providers" (click)="setProvider(eSessionType.awsIamRoleFederated);"><img src="assets/images/aws-logo.svg" height="20"></button>
-        <button type="button" class="providers" (click)="setProvider(eSessionType.azure);"><img src="assets/images/azure-logo.svg" height="20"></button>
+        <button type="button" class="providers" (click)="setProvider(eSessionType.awsIamRoleFederated);"><img src="assets/images/aws-logo.svg" height="20" alt=""></button>
+        <button type="button" class="providers" (click)="setProvider(eSessionType.azure);"><img src="assets/images/azure-logo.svg" height="20" alt=""></button>
         </div>
       </div>
 
@@ -24,7 +24,7 @@
         <label>My integration is:</label>
         <br>
         <div class="correct-top">
-          <button type="button" class="providers" (click)="goToAwsSso()"><img src="assets/images/aws-sso-logo.png" height="20"></button>
+          <button type="button" class="providers" (click)="goToAwsSso()"><img src="assets/images/aws-sso-logo.png" height="20" alt=""></button>
         </div>
       </div>
     </ng-container>
