--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,7 @@ $theme-colors: (
 /**
 Library scss
 */
+//noinspection CssUnknownTarget
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import "~bootstrap/dist/css/bootstrap.css";
 
