--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,6 +5,10 @@ body {
 }
 
 :root {
+  /* Code font */
+  --md-code-font-family: "Roboto Mono";
+
+  /* Default foreground color */
   --md-default-fg-color--light: #080B38;
 
   /* Primary color shades */
@@ -23,10 +27,6 @@ body {
 }
 
 :root > * {
-  /* Code block color shades */
-  --md-code-bg-color: hsl(0, 0%, 94%);
-  --md-code-fg-color: hsla(200, 18%, 26%, 1);
-
   /* Footer */
   --md-footer-bg-color: #080B38;
   --md-footer-bg-color--dark: hsla(0, 0%, 0%, 0.32);
@@ -35,6 +35,9 @@ body {
   --md-footer-fg-color--lighter: hsla(0, 0%, 100%, 0.3);
 }
 
+th {
+  white-space:nowrap;
+}
 
 img[src$="center-img"] {
   display:block;
@@ -79,4 +82,35 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
   line-height: 26px;
+}
+
+details p {
+  font-size: .64rem;
+  font-weight: 400;
+  padding: 20px;
+}
+
+.md-typeset .admonition.note,
+.md-typeset details.note {
+  border-color: #448aff;
+}
+
+.md-typeset details.info,
+.md-typeset details.todo {
+  border-color: #78E0CF;
+}
+
+.md-typeset .info > .admonition-title:before,
+.md-typeset .info > summary:before,
+.md-typeset .todo > .admonition-title:before,
+.md-typeset .todo > summary:before {
+  background-color: #78E0CF;
+}
+
+.md-typeset .info >.admonition-title,
+.md-typeset .info > summary,
+.md-typeset .todo > .admonition-title,
+.md-typeset .todo > summary {
+  background-color: rgba(0,184,212,.1);
+  border-color: #78E0CF;
 }
